# rust-crud

./: README.md
app/: Cargo.toml
app/src/: main.rs  models.rs  routes.rs
